--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#379634</color>
-    <color name="purple_500">#9F7E69</color>
+    <color name="purple_500">#000000</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="slimy_green">#379634</color>
+    <color name="forest_green">#0A3200</color>
+    <color name="gray">#D3d3D3</color>
+
 </resources>
