modified myprofile_seller acivity

--- a/app/src/main/res/layout/activity_my_profile_seller.xml
+++ b/app/src/main/res/layout/activity_my_profile_seller.xml
@@ -16,14 +16,15 @@
         android:paddingStart="20dp"
         android:layout_marginTop="40dp">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/myprofile_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
             android:contentDescription="@null"
-            android:background="@drawable/profileicon"
-            android:src="@drawable/ic_profileicon"/>
+            android:src="@drawable/ic_profile"
+            android:background="@drawable/profilebg"/>
+
         <TextView
             android:id="@+id/myprofile_name"
             android:layout_width="wrap_content"
