--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     </ImageView>
 
     <Button
-        android:id="@+id/register_btn"
+        android:id="@+id/app_register_btn"
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
@@ -37,7 +37,7 @@
         tools:ignore="TextContrastCheck,TouchTargetSizeCheck"></Button>
 
     <Button
-        android:id="@+id/login_btn"
+        android:id="@+id/app_login_btn"
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
