recent updates sa login, register part (bawal daw period sa email huhu)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
     tools:context=".loginActivity">
     
     <ImageView
@@ -14,7 +13,7 @@
         android:src="@drawable/logo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
-        />
+        android:contentDescription="@string/emonganilogo" />
 
     <TextView
         android:id="@+id/textView"
@@ -26,37 +25,40 @@
         android:fontFamily="@font/nunito_sans_extrabold"
         android:text="Login"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        tools:ignore="HardcodedText" />
 
     <EditText
-        android:id="@+id/login_email_address_input"
+        android:id="@+id/login_username_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="30dp"
+        android:autofillHints=""
         android:background="@drawable/input_design"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="Email Address"
-        android:inputType="textEmailAddress"
+        android:hint="@string/username"
+        android:inputType="text"
         android:padding="20dp"
-        android:textColor="@color/colorPrimary"></EditText>
+        android:textColor="@color/colorPrimary" />
 
     <EditText
         android:id="@+id/login_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_email_address_input"
+        android:layout_below="@+id/login_username_input"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/input_design"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="20dp"
-        android:textColor="@color/colorPrimary"></EditText>
+        android:textColor="@color/colorPrimary"
+        android:autofillHints="" />
 
     <LinearLayout
         android:id="@+id/linear_layout_1"
@@ -64,8 +66,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/login_password_input"
-        android:layout_marginTop="5dp"
-        ></LinearLayout>
+        android:layout_marginTop="5dp" />
 
     <com.rey.material.widget.CheckBox
         android:id="@+id/remember_me_chkb"
@@ -77,38 +78,38 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/nunito_sans"
         android:gravity="center_vertical"
-        android:text="Remember me"
+        android:minHeight="48dp"
+        android:text="@string/remember_me"
         android:textColor="#5C5C5C"
         android:textSize="16sp"
-        app:cbd_strokeColor="@color/colorPrimary"></com.rey.material.widget.CheckBox>
+        app:cbd_strokeColor="@color/colorPrimary" />
 
     <Button
         android:id="@+id/login_btn"
         android:layout_width="125dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_below="@+id/remember_me_chkb"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="127dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/buttons"
         android:fontFamily="@font/nunito_sans_extrabold"
-        android:text="LOGIN"
+        android:text="@string/login"
         android:textAllCaps="false"
         android:textColor="@color/colorAccent"
-        android:textSize="18sp"></Button>
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/forget_password_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/nunito_sans"
         android:layout_below="@+id/login_btn"
-        android:layout_marginTop="5dp"
-        android:text="Forget Password"
-        android:textColor="#4CA9FB"
         android:layout_centerHorizontal="true"
-        ></TextView>
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/nunito_sans"
+        android:text="@string/forget_password"
+        android:textColor="#0277BD" />
 
 </RelativeLayout>
