--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/register"
     tools:context=".registerActivity">
 
     <TextView
@@ -12,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="65dp"
         android:fontFamily="@font/nunito_sans_extrabold"
-        android:text="Create new Account"
+        android:text="@string/create_new_account"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp" />
 
@@ -28,10 +27,11 @@
         android:layout_marginRight="50dp"
         android:background="@drawable/input_design2"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="First Name"
+        android:hint="@string/first_name"
         android:inputType="textPersonName|text"
-        android:padding="10dp"
-        android:textColor="@color/colorPrimary"></EditText>
+        android:padding="15dp"
+        android:textColor="@color/colorPrimary"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/register_last_name_input"
@@ -43,10 +43,11 @@
         android:layout_marginRight="50dp"
         android:background="@drawable/input_design2"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="Last Name"
+        android:hint="@string/last_name"
         android:inputType="textPersonName|text"
-        android:padding="10dp"
-        android:textColor="@color/colorPrimary"></EditText>
+        android:padding="15dp"
+        android:textColor="@color/colorPrimary"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/register_email_address_input"
@@ -56,12 +57,13 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="50dp"
+        android:autofillHints=""
         android:background="@drawable/input_design2"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="Email Address"
+        android:hint="@string/email_address"
         android:inputType="text|textEmailAddress"
-        android:padding="10dp"
-        android:textColor="@color/colorPrimary"></EditText>
+        android:padding="15dp"
+        android:textColor="@color/colorPrimary" />
 
     <EditText
         android:id="@+id/register_mobile_number_input"
@@ -73,10 +75,11 @@
         android:layout_marginRight="50dp"
         android:background="@drawable/input_design2"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="Mobile Number"
+        android:hint="@string/mobile_number"
         android:inputType="text|phone"
-        android:padding="10dp"
-        android:textColor="@color/colorPrimary"></EditText>
+        android:padding="15dp"
+        android:textColor="@color/colorPrimary"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/register_username_input"
@@ -86,12 +89,13 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="50dp"
+        android:autofillHints=""
         android:background="@drawable/input_design2"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="Username"
+        android:hint="@string/username"
         android:inputType="text"
-        android:padding="10dp"
-        android:textColor="@color/colorPrimary"></EditText>
+        android:padding="15dp"
+        android:textColor="@color/colorPrimary" />
 
     <EditText
         android:id="@+id/register_password_input"
@@ -101,12 +105,13 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="50dp"
+        android:autofillHints=""
         android:background="@drawable/input_design2"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="Password"
-        android:inputType="text"
-        android:padding="10dp"
-        android:textColor="@color/colorPrimary"></EditText>
+        android:hint="@string/password"
+        android:inputType="text|textPassword"
+        android:padding="15dp"
+        android:textColor="@color/colorPrimary" />
 
     <com.rey.material.widget.CheckBox
         android:id="@+id/seller_chkb"
@@ -115,13 +120,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/register_password_input"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/nunito_sans_bold"
         android:gravity="center_vertical"
-        android:text="As a Seller"
+        android:minHeight="48dp"
+        android:text="@string/as_a_seller"
         android:textColor="#5C5C5C"
         android:textSize="16sp"
-        app:cbd_strokeColor="#9F7E69"></com.rey.material.widget.CheckBox>
+        app:cbd_strokeColor="#9F7E69" />
 
     <com.rey.material.widget.CheckBox
         android:id="@+id/buyer_chkb"
@@ -130,29 +136,30 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/seller_chkb"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="-15dp"
         android:fontFamily="@font/nunito_sans_bold"
         android:gravity="center_vertical"
-        android:text="As a Buyer"
+        android:minHeight="48dp"
+        android:text="@string/as_a_buyer"
         android:textColor="#5C5C5C"
         android:textSize="16sp"
-        app:cbd_strokeColor="#9F7E69"></com.rey.material.widget.CheckBox>
+        app:cbd_strokeColor="#9F7E69" />
 
     <Button
         android:id="@+id/register_btn"
         android:layout_width="130dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_below="@+id/buyer_chkb"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="127dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/buttons"
         android:fontFamily="@font/nunito_sans_extrabold"
-        android:text="REGISTER"
+        android:text="@string/register"
         android:textAllCaps="false"
         android:textColor="@color/colorAccent"
-        android:textSize="18sp"></Button>
+        android:textSize="18sp" />
 
 </RelativeLayout>
