--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EmongANI" parent="Theme.AppCompat.Light">
+    <style name="Theme.EmongANI" parent="Theme.AppCompat.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/slimy_green</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,5 +14,14 @@
 
         <!--Customize your theme here. -->
     </style>
+
+    <style name="Theme.EmongANI.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.EmongANI.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.EmongANI.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
