--- a/app/src/main/res/drawable/startbiddingdialogbackground.xml
+++ b/app/src/main/res/drawable/startbiddingdialogbackground.xml
@@ -2,10 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:color="@color/black"
-        android:width="1dp" />
-  <corners
-        android:radius="5dp"/>
-
+        android:width="2dp"
+        android:color="@color/slimy_green"/>
+    <solid
+        android:color="@color/white"/>
 
 </shape>
