--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-          android:id="@+id/home"
+          android:id="@+id/homepage"
           android:title="Home"
           android:icon="@drawable/ic_home_icon"/>
     <item
-          android:id="@+id/chat"
+          android:id="@+id/chatpage"
           android:title="Chat"
           android:icon="@drawable/ic_chat_icon"/>
-    <item android:title="My Profile"
-          android:id="@+id/myProfileSeller"
-          android:icon="@drawable/ic_myprofile_icon"/>
+    <item android:id="@+id/profilepage"
+          android:title="My Profile"
+          android:icon="@drawable/ic_myprofile_icon"
+          android:state_selected="true" />
 </menu>
