--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         tools:ignore="HardcodedText" />
 
     <EditText
-        android:id="@+id/login_username_input"
+        android:id="@+id/login_emailaddress_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
@@ -39,7 +39,7 @@
         android:autofillHints=""
         android:background="@drawable/input_design"
         android:fontFamily="@font/nunito_sans_bold"
-        android:hint="@string/username"
+        android:hint="@string/email_address"
         android:inputType="text"
         android:padding="20dp"
         android:textColor="@color/colorPrimary" />
@@ -48,17 +48,17 @@
         android:id="@+id/login_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_username_input"
+        android:layout_below="@+id/login_emailaddress_input"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="30dp"
+        android:autofillHints=""
         android:background="@drawable/input_design"
         android:fontFamily="@font/nunito_sans_bold"
         android:hint="@string/password"
-        android:inputType="textPassword"
+        android:inputType="text|textPassword"
         android:padding="20dp"
-        android:textColor="@color/colorPrimary"
-        android:autofillHints="" />
+        android:textColor="@color/colorPrimary" />
 
     <LinearLayout
         android:id="@+id/linear_layout_1"
